# telego

./: .replit  Pipfile  config.yaml  database.db  en_texts.py  main.py  old_texts.py  pruebas.py  pyproject.toml  requeriments.txt  texts.py
bot/: menu.py  new_users.py  root.py
bot/admin/: admin.py
bot/admin/channels/: add.py  channels.py  list.py  view.py
bot/admin/users/: broadcast.py  search.py  users.py  view.py
bot/posts/: create.py  list.py  posts.py  view.py
telef/: config.py  logger.py  models.py  pred.py  shortcuts.py  tf.py  types.py
