[tool.poetry]
name = "telego"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.14.0"
timeloop = "^1.0.2"
colorama = "^0.4.4"
PyYAML = "^5.4.1"
pyTelegramBotAPI = "3.7.1"
telebot = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
